samples/_failures_safe/1761159868_8bd879_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6223c9e.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_b6223c9e.c:187:24: error: expected identifier at end of input
  187 |                 struct GraphNode* neighbor = graph->
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_b6223c9e.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6223c9e.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6223c9e.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6223c9e.c:187:24: error: expected declaration or statement at end of input
